Fix button active color which is too dark

--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
   --form-bg-color: white;
   --logo-bg-color: rgba(0, 0, 0, 0.5);
   --button-color: #596D48;
-  --button-hover-color: #506340;
-  --button-active-color: #475939;
+  --button-hover-color: #556844;
+  --button-active-color: #506340;
 }
 
 @font-face {
